# dlp-encrypt

./: .env.example  .gitignore  README.md  pyproject.toml
src/dlp_encrypt/: __init__.py  cli.py  config.py  encrypt.py
tests/: enc  test_encrypt.py
