[project]
name = "dlp-encrypt"
version = "0.1.0"
description = "Encrypt documents for DLP MCP decryption"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[project.scripts]
dlp-encrypt = "dlp_encrypt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dlp_encrypt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
